# coligunCalc

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README_cn.md  __init__.py  basics.c  basics.cpp  basics.py  basics.pyx  core.py  findings.md  log.txt  multistage.py  progress.md  setup.py  singleStage.py  task_plan.md
Notes/: 参数备注.md
THINGING/: L.py  M.py
cc/: common.py  singleStage.py
docs/: API.md  API_cn.md  CUDA-feasibility.md  NumericalModel.md  PerformanceOptimizationDesignTemplate.md  PerformanceOptimizationExecutionPlanTemplate.md  PerformanceReview.md  PerformanceReview_cn.md  audit_report.md  code_review_2026-07-20.md
docs/benchmarks/: 2026-07-19-unified-gpu-engine.md  2026-07-19-unified-gpu-engine_cn.md  2026-07-21-integrated-pipeline.md  2026-07-24-PerformanceOptimizationEffectiveness.md  GPU-Benchmark-Schema.md  Optional CI Plan.md
docs/bugs/: B1-multi-stage-divergence.md
docs/superpowers/plans/: 2026-07-17-cuda-acceleration-dispatch.md  2026-07-17-cuda-acceleration.md  2026-07-18-persistent-kernel.md  2026-07-18-post-audit-fix-plan.md
docs/superpowers/specs/: 2026-07-17-cuda-acceleration-design.md  2026-07-18-gpu-optimization-design.md
include/coilgun/: coilgun.hpp  coilgun_cuda.hpp
include/coilgun/components/: armature.hpp  driving_coil.hpp
include/coilgun/core/: types.hpp
include/coilgun/physics/: cache.hpp  constants.hpp  elliptic.cuh  elliptic.hpp  lookup_tables.hpp  mutual_inductance.cuh  mutual_inductance.hpp  quadrature.hpp  self_inductance.hpp  struve.hpp
include/coilgun/simulation/: cpu_phase_timing.hpp  derivative_workspace.hpp  excitation.hpp  excitation_snapshot.hpp  integration_state.hpp  multi_stage_result.hpp  multi_stage_sim.hpp  sim_result.hpp  single_stage_sim.hpp  termination.hpp  time_stepper.hpp  trigger_config.hpp
include/coilgun/simulation/cuda/: gpu_adaptor.hpp  gpu_backend.hpp  gpu_engine.hpp  gpu_execution_config.hpp  gpu_execution_context.hpp  gpu_execution_report.hpp  gpu_graph.hpp  gpu_multi_stage_sim.hpp  gpu_mutual_pipeline.hpp  gpu_single_stage_sim.hpp  gpu_solver.hpp  gpu_state_kernels.hpp  gpu_state_layout.hpp  gpu_thermal.hpp  persistent_kernel.cuh  sim_batch.hpp
include/coilgun/tools/: t_table_workers.hpp
sc/: common.py  multistage.py  singleStage.py
scripts/: verify_t_table.py
src/: CMakeLists.txt  coilgun.cpp
src/components/: armature.cpp  driving_coil.cpp
src/cuda/: CMakeLists.txt  gpu_adaptor.cu  gpu_elliptic.cu  gpu_engine.cu  gpu_execution_context.cu  gpu_graph.cu  gpu_multi_stage_sim.cu  gpu_mutual_inductance.cu  gpu_mutual_pipeline.cu  gpu_single_stage_sim.cu  gpu_solver.cu  gpu_state_kernels.cu  gpu_thermal.cu  persistent_kernel.cu  sim_batch.cu
src/physics/: constants.cpp  elliptic.cpp  lookup_tables.cpp  mutual_inductance.cpp  quadrature.cpp  self_inductance.cpp  struve.cpp
src/simulation/: cpu_phase_timing.cpp  excitation.cpp  integration_state.cpp  multi_stage_result.cpp  multi_stage_sim.cpp  sim_result.cpp  single_stage_sim.cpp  termination.cpp
tests/: CMakeLists.txt  basics_drivingCoil_L.py  bench_cpu_sim.cpp  bench_gpu_engine.cu  gpu_engine_fixture.hpp  gpu_numerical_tolerances.hpp  test_armature.cpp  test_coupled_integrator.cpp  test_cpu_phase_timing.cpp  test_driving_coil.cpp  test_elliptic.cpp  test_fixtures.hpp  test_gpu_assembly.cpp  test_gpu_batch.cpp  test_gpu_coil_pair.cpp  test_gpu_context_smoke.cpp  test_gpu_elliptic.cpp  test_gpu_engine_layout.cpp  test_gpu_engine_physics.cpp  test_gpu_execution_policy.cpp  test_gpu_filament.cpp  test_gpu_graph.cpp  test_gpu_graph_pipeline.cpp  test_gpu_paths.cpp  test_gpu_precision.cpp  test_gpu_resident_pipeline.cpp  test_gpu_resource_contracts.cpp  test_gpu_sim_batch.cpp  test_gpu_solver.cpp  test_gpu_thermal.cpp  test_gpu_thermal_cpu.cpp  test_gpu_vs_cpu_multi.cpp  test_gpu_vs_cpu_single.cpp  test_input_validation.cpp  test_integration.cpp  test_lookup.cpp  test_multi_stage_sim.cpp  test_mutual_inductance.cpp  test_quadrature.cpp  test_self_inductance.cpp  (+4 more)
tools/: generate_t_table.cpp
